tdr/protocol/gen/tdr_xlsx_reader_l.c
/* Generated by re2c 1.0.1 on Tue Feb 23 17:07:57 2021 */
#line 1 "/home/merlin/workspace/TDR-Merlin/tdr/protocol/tdr_xlsx_reader_l.re"
#include "../tdr_xlsx_reader.h"
#include "tdr_xlsx_reader_l.h"
#include <errno.h>

#define YYGETCONDITION()  self->scanner.state
#define YYSETCONDITION(s) self->scanner.state = s
#define STATE(name)  yyc##name
#define BEGIN(state) YYSETCONDITION(STATE(state))
#define YYCURSOR self->scanner.cursor
#define YYLIMIT self->scanner.limit
#define YYMARKER self->scanner.marker
#define YYCTYPE char
#line 15 "/home/merlin/workspace/TDR-Merlin/tdr/protocol/tdr_xlsx_reader_l.re"


static void xpos2pos(tdr_xlsx_pos *self, const char* xpos)
{
	self->col = 0;
	while(*xpos >='A')
	{
		self->col *= 26;
		self->col += *xpos - 'A' + 1;
		++xpos;
	}
	--(self->col);

	self->row = 0;
	while(*xpos != 0)
	{
		self->row *= 10;
		self->row += *xpos - '0';
		++xpos;
	}
}

tdr_error_code_t tdr_xlsx_reader_loadsheet(tdr_xlsx_reader_t *self, uint32_t bindinfo_row)
{
	tdr_xlsx_cell_s *cell = NULL;
	int is_sharedstring = FALSE;
	tdr_xlsx_cell_s *current_row = NULL;

	self->scanner.cursor = self->sheet_buff;
	self->scanner.limit = self->sheet_buff + self->sheet_buff_size;
	self->scanner.marker = self->scanner.cursor;
	self->scanner.state = yycINITIAL;
	self->cell_matrix = NULL;
	self->bindinfo_row = NULL;

restart:
	if(self->scanner.cursor >= self->scanner.limit)
	{
		if(self->bindinfo_row == NULL)
		{
			goto ERROR_RET;
		}
		return E_TDR_NOERROR;
	}

#line 62 "/home/merlin/workspace/TDR-Merlin/tdr/protocol/gen/tdr_xlsx_reader_l.c"
{
	YYCTYPE yych;
	switch (YYGETCONDITION()) {
	case yycINITIAL: goto yyc_INITIAL;
	case yycIN_SHEETDATA: goto yyc_IN_SHEETDATA;
	case yycIN_ROW: goto yyc_IN_ROW;
	case yycIN_COL: goto yyc_IN_COL;
	}
/* *********************************** */
yyc_INITIAL:
	yych = *YYCURSOR;
	switch (yych) {
	case '<':	goto yy5;
	default:	goto yy3;
	}
yy3:
	++YYCURSOR;
yy4:
#line 211 "/home/merlin/workspace/TDR-Merlin/tdr/protocol/tdr_xlsx_reader_l.re"
	{ goto restart;}
#line 83 "/home/merlin/workspace/TDR-Merlin/tdr/protocol/gen/tdr_xlsx_reader_l.c"
yy5:
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case '/':	goto yy6;
	case 'd':	goto yy8;
	case 's':	goto yy9;
	default:	goto yy4;
	}
yy6:
	yych = *++YYCURSOR;
	switch (yych) {
	case 's':	goto yy10;
	default:	goto yy7;
	}
yy7:
	YYCURSOR = YYMARKER;
	goto yy4;
yy8:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'i':	goto yy11;
	default:	goto yy7;
	}
yy9:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'h':	goto yy12;
	default:	goto yy7;
	}
yy10:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'h':	goto yy13;
	default:	goto yy7;
	}
yy11:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'm':	goto yy14;
	default:	goto yy7;
	}
yy12:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'e':	goto yy15;
	default:	goto yy7;
	}
yy13:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'e':	goto yy16;
	default:	goto yy7;
	}
yy14:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'e':	goto yy17;
	default:	goto yy7;
	}
yy15:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'e':	goto yy18;
	default:	goto yy7;
	}
yy16:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'e':	goto yy19;
	default:	goto yy7;
	}
yy17:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'n':	goto yy20;
	default:	goto yy7;
	}
yy18:
	yych = *++YYCURSOR;
	switch (yych) {
	case 't':	goto yy21;
	default:	goto yy7;
	}
yy19:
	yych = *++YYCURSOR;
	switch (yych) {
	case 't':	goto yy22;
	default:	goto yy7;
	}
yy20:
	yych = *++YYCURSOR;
	switch (yych) {
	case 's':	goto yy23;
	default:	goto yy7;
	}
yy21:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'd':	goto yy24;
	default:	goto yy7;
	}
yy22:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'd':	goto yy25;
	default:	goto yy7;
	}
yy23:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'i':	goto yy26;
	default:	goto yy7;
	}
yy24:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'a':	goto yy27;
	default:	goto yy7;
	}
yy25:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'a':	goto yy28;
	default:	goto yy7;
	}
yy26:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'o':	goto yy29;
	default:	goto yy7;
	}
yy27:
	yych = *++YYCURSOR;
	switch (yych) {
	case 't':	goto yy30;
	default:	goto yy7;
	}
yy28:
	yych = *++YYCURSOR;
	switch (yych) {
	case 't':	goto yy31;
	default:	goto yy7;
	}
yy29:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'n':	goto yy32;
	default:	goto yy7;
	}
yy30:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'a':	goto yy34;
	default:	goto yy7;
	}
yy31:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'a':	goto yy35;
	default:	goto yy7;
	}
yy32:
	yych = *++YYCURSOR;
	switch (yych) {
	case '\t':
	case ' ':	goto yy32;
	case 'r':	goto yy36;
	default:	goto yy7;
	}
yy34:
	yych = *++YYCURSOR;
	switch (yych) {
	case '>':	goto yy37;
	default:	goto yy7;
	}
yy35:
	yych = *++YYCURSOR;
	switch (yych) {
	case '>':	goto yy39;
	default:	goto yy7;
	}
yy36:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'e':	goto yy41;
	default:	goto yy7;
	}
yy37:
	++YYCURSOR;
#line 102 "/home/merlin/workspace/TDR-Merlin/tdr/protocol/tdr_xlsx_reader_l.re"
	{ BEGIN(IN_SHEETDATA);goto restart;	}
#line 275 "/home/merlin/workspace/TDR-Merlin/tdr/protocol/gen/tdr_xlsx_reader_l.c"
yy39:
	++YYCURSOR;
#line 210 "/home/merlin/workspace/TDR-Merlin/tdr/protocol/tdr_xlsx_reader_l.re"
	{ BEGIN(INITIAL);goto restart;		 }
#line 280 "/home/merlin/workspace/TDR-Merlin/tdr/protocol/gen/tdr_xlsx_reader_l.c"
yy41:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'f':	goto yy42;
	default:	goto yy7;
	}
yy42:
	yych = *++YYCURSOR;
	switch (yych) {
	case '=':	goto yy43;
	default:	goto yy7;
	}
yy43:
	yych = *++YYCURSOR;
	switch (yych) {
	case '"':	goto yy44;
	default:	goto yy7;
	}
yy44:
	++YYCURSOR;
#line 61 "/home/merlin/workspace/TDR-Merlin/tdr/protocol/tdr_xlsx_reader_l.re"
	{
	uint32_t i;
	char *size_min = YYCURSOR;
	char *size_max = NULL;

	
	while(*YYCURSOR != '"')
	{
		if(*YYCURSOR == ':')
		{
			*YYCURSOR = 0;
			++YYCURSOR;
			size_max = YYCURSOR;
		}
		else
		{
			++YYCURSOR;
		}
	}
	*YYCURSOR = 0;
	++YYCURSOR;

	xpos2pos(&self->cell_min_pos, size_min);
	xpos2pos(&self->cell_max_pos, size_max);
	self->cell_row_size = (self->cell_max_pos.row - self->cell_min_pos.row + 1);
	self->cell_col_size = (self->cell_max_pos.col - self->cell_min_pos.col + 1);
	if(self->use_cache)
	{
		self->hash_cache = malloc(sizeof(tdr_xlsx_cell_s) * self->cell_col_size);
	}
	self->cell_matrix = malloc(sizeof(tdr_xlsx_cell_s) * self->cell_row_size * self->cell_col_size);
	if(self->cell_matrix == NULL)
	{
		goto ERROR_RET;
	}
	for(i = 0; i < self->cell_row_size * self->cell_col_size; ++i)
	{
		self->cell_matrix[i].empty = TRUE;
	}
	goto restart;
}
#line 343 "/home/merlin/workspace/TDR-Merlin/tdr/protocol/gen/tdr_xlsx_reader_l.c"
/* *********************************** */
yyc_IN_SHEETDATA:
	yych = *YYCURSOR;
	switch (yych) {
	case '<':	goto yy50;
	default:	goto yy48;
	}
yy48:
	++YYCURSOR;
yy49:
#line 211 "/home/merlin/workspace/TDR-Merlin/tdr/protocol/tdr_xlsx_reader_l.re"
	{ goto restart;}
#line 356 "/home/merlin/workspace/TDR-Merlin/tdr/protocol/gen/tdr_xlsx_reader_l.c"
yy50:
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case '/':	goto yy51;
	case 'r':	goto yy53;
	default:	goto yy49;
	}
yy51:
	yych = *++YYCURSOR;
	switch (yych) {
	case 's':	goto yy54;
	default:	goto yy52;
	}
yy52:
	YYCURSOR = YYMARKER;
	goto yy49;
yy53:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'o':	goto yy55;
	default:	goto yy52;
	}
yy54:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'h':	goto yy56;
	default:	goto yy52;
	}
yy55:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'w':	goto yy57;
	default:	goto yy52;
	}
yy56:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'e':	goto yy59;
	default:	goto yy52;
	}
yy57:
	yych = *++YYCURSOR;
	switch (yych) {
	case '\t':
	case ' ':	goto yy57;
	case 'r':	goto yy60;
	default:	goto yy52;
	}
yy59:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'e':	goto yy61;
	default:	goto yy52;
	}
yy60:
	yych = *++YYCURSOR;
	switch (yych) {
	case '=':	goto yy62;
	default:	goto yy52;
	}
yy61:
	yych = *++YYCURSOR;
	switch (yych) {
	case 't':	goto yy63;
	default:	goto yy52;
	}
yy62:
	yych = *++YYCURSOR;
	switch (yych) {
	case '"':	goto yy64;
	default:	goto yy52;
	}
yy63:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'd':	goto yy66;
	default:	goto yy52;
	}
yy64:
	++YYCURSOR;
#line 104 "/home/merlin/workspace/TDR-Merlin/tdr/protocol/tdr_xlsx_reader_l.re"
	{
	const char *r = YYCURSOR;
	uint32_t row;
	int is_single = FALSE;
	while(*YYCURSOR != '"')
	{
		++YYCURSOR;
	}
	*YYCURSOR = 0;
	errno = 0;
	row = strtoul(r, NULL, 10);
	if(errno != 0)
	{
		goto ERROR_RET;
	}
	current_row = self->cell_matrix + (row - self->cell_min_pos.row) * self->cell_col_size;

	while(*YYCURSOR != '>')
	{
		if(*YYCURSOR == '/')
		{
			is_single = TRUE;
		}
		++YYCURSOR;
	}
	++YYCURSOR;
	
	if(is_single)
	{
		goto restart;
	}

	if(row == bindinfo_row)
	{
		self->bindinfo_row = current_row;
	}
	BEGIN(IN_ROW);
	goto restart;
}
#line 477 "/home/merlin/workspace/TDR-Merlin/tdr/protocol/gen/tdr_xlsx_reader_l.c"
yy66:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'a':	goto yy67;
	default:	goto yy52;
	}
yy67:
	yych = *++YYCURSOR;
	switch (yych) {
	case 't':	goto yy68;
	default:	goto yy52;
	}
yy68:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'a':	goto yy69;
	default:	goto yy52;
	}
yy69:
	yych = *++YYCURSOR;
	switch (yych) {
	case '>':	goto yy70;
	default:	goto yy52;
	}
yy70:
	++YYCURSOR;
#line 209 "/home/merlin/workspace/TDR-Merlin/tdr/protocol/tdr_xlsx_reader_l.re"
	{ BEGIN(INITIAL); goto restart;		 }
#line 506 "/home/merlin/workspace/TDR-Merlin/tdr/protocol/gen/tdr_xlsx_reader_l.c"
/* *********************************** */
yyc_IN_ROW:
	yych = *YYCURSOR;
	switch (yych) {
	case '<':	goto yy76;
	default:	goto yy74;
	}
yy74:
	++YYCURSOR;
yy75:
#line 211 "/home/merlin/workspace/TDR-Merlin/tdr/protocol/tdr_xlsx_reader_l.re"
	{ goto restart;}
#line 519 "/home/merlin/workspace/TDR-Merlin/tdr/protocol/gen/tdr_xlsx_reader_l.c"
yy76:
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case '/':	goto yy77;
	case 'c':	goto yy79;
	default:	goto yy75;
	}
yy77:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'r':	goto yy81;
	default:	goto yy78;
	}
yy78:
	YYCURSOR = YYMARKER;
	goto yy75;
yy79:
	++YYCURSOR;
#line 144 "/home/merlin/workspace/TDR-Merlin/tdr/protocol/tdr_xlsx_reader_l.re"
	{
	cell = NULL;
	is_sharedstring = FALSE;

	BEGIN(IN_COL);	
	goto restart;
}
#line 546 "/home/merlin/workspace/TDR-Merlin/tdr/protocol/gen/tdr_xlsx_reader_l.c"
yy81:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'o':	goto yy82;
	default:	goto yy78;
	}
yy82:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'w':	goto yy83;
	default:	goto yy78;
	}
yy83:
	yych = *++YYCURSOR;
	switch (yych) {
	case '>':	goto yy84;
	default:	goto yy78;
	}
yy84:
	++YYCURSOR;
#line 208 "/home/merlin/workspace/TDR-Merlin/tdr/protocol/tdr_xlsx_reader_l.re"
	{ BEGIN(IN_SHEETDATA); goto restart; }
#line 569 "/home/merlin/workspace/TDR-Merlin/tdr/protocol/gen/tdr_xlsx_reader_l.c"
/* *********************************** */
yyc_IN_COL:
	yych = *YYCURSOR;
	switch (yych) {
	case '/':	goto yy90;
	case '<':	goto yy91;
	case 'r':	goto yy92;
	case 't':	goto yy93;
	default:	goto yy88;
	}
yy88:
	++YYCURSOR;
yy89:
#line 211 "/home/merlin/workspace/TDR-Merlin/tdr/protocol/tdr_xlsx_reader_l.re"
	{ goto restart;}
#line 585 "/home/merlin/workspace/TDR-Merlin/tdr/protocol/gen/tdr_xlsx_reader_l.c"
yy90:
	yych = *++YYCURSOR;
	switch (yych) {
	case '>':	goto yy94;
	default:	goto yy89;
	}
yy91:
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case '/':	goto yy96;
	case 'v':	goto yy98;
	default:	goto yy89;
	}
yy92:
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case '=':	goto yy99;
	default:	goto yy89;
	}
yy93:
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case '=':	goto yy100;
	default:	goto yy89;
	}
yy94:
	++YYCURSOR;
#line 183 "/home/merlin/workspace/TDR-Merlin/tdr/protocol/tdr_xlsx_reader_l.re"
	{
	BEGIN(IN_ROW);
	goto restart;
}
#line 618 "/home/merlin/workspace/TDR-Merlin/tdr/protocol/gen/tdr_xlsx_reader_l.c"
yy96:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'c':	goto yy101;
	case 'v':	goto yy102;
	default:	goto yy97;
	}
yy97:
	YYCURSOR = YYMARKER;
	goto yy89;
yy98:
	yych = *++YYCURSOR;
	switch (yych) {
	case '>':	goto yy103;
	default:	goto yy97;
	}
yy99:
	yych = *++YYCURSOR;
	switch (yych) {
	case '"':	goto yy105;
	default:	goto yy97;
	}
yy100:
	yych = *++YYCURSOR;
	switch (yych) {
	case '"':	goto yy107;
	default:	goto yy97;
	}
yy101:
	yych = *++YYCURSOR;
	switch (yych) {
	case '>':	goto yy109;
	default:	goto yy97;
	}
yy102:
	yych = *++YYCURSOR;
	switch (yych) {
	case '>':	goto yy111;
	default:	goto yy97;
	}
yy103:
	++YYCURSOR;
#line 206 "/home/merlin/workspace/TDR-Merlin/tdr/protocol/tdr_xlsx_reader_l.re"
	{ cell->val_begin = YYCURSOR; cell->val_start = cell->val_begin; goto restart;}
#line 663 "/home/merlin/workspace/TDR-Merlin/tdr/protocol/gen/tdr_xlsx_reader_l.c"
yy105:
	++YYCURSOR;
#line 152 "/home/merlin/workspace/TDR-Merlin/tdr/protocol/tdr_xlsx_reader_l.re"
	{
	const char* xpos = YYCURSOR;
	tdr_xlsx_pos pos;
	while(*YYCURSOR != '"')
	{
		++YYCURSOR;
	}
	*YYCURSOR = 0;
	++YYCURSOR;

	xpos2pos(&pos, xpos);
	cell = current_row + (pos.col - self->cell_min_pos.col);
	cell->empty = FALSE;
	cell->xpos = xpos;
		
	goto restart;
}
#line 684 "/home/merlin/workspace/TDR-Merlin/tdr/protocol/gen/tdr_xlsx_reader_l.c"
yy107:
	++YYCURSOR;
#line 170 "/home/merlin/workspace/TDR-Merlin/tdr/protocol/tdr_xlsx_reader_l.re"
	{
	if((*YYCURSOR == 's') && (*(YYCURSOR + 1) == '"'))
	{
		is_sharedstring = TRUE;
	}	
	
	while(*YYCURSOR != '>')
	{
		++YYCURSOR;
	}
	++YYCURSOR;
}
#line 700 "/home/merlin/workspace/TDR-Merlin/tdr/protocol/gen/tdr_xlsx_reader_l.c"
yy109:
	++YYCURSOR;
#line 188 "/home/merlin/workspace/TDR-Merlin/tdr/protocol/tdr_xlsx_reader_l.re"
	{
	if(is_sharedstring)
	{
		uint32_t string_index;
		errno = 0;
		string_index = strtoul(cell->val_begin, NULL, 10);
		if(errno != 0)
		{
			goto ERROR_RET;
		}
		cell->val_begin = self->sharedstring_begin_list[string_index];
		cell->val_start = cell->val_begin;
		cell->val_end = self->sharedstring_end_list[string_index];
		cell->val_limit = cell->val_end;
	}
	BEGIN(IN_ROW);
	goto restart;
}
#line 722 "/home/merlin/workspace/TDR-Merlin/tdr/protocol/gen/tdr_xlsx_reader_l.c"
yy111:
	++YYCURSOR;
#line 207 "/home/merlin/workspace/TDR-Merlin/tdr/protocol/tdr_xlsx_reader_l.re"
	{ cell->val_end = YYCURSOR - 4; *(YYCURSOR - 4)= 0; cell->val_limit = cell->val_end; goto restart;}
#line 727 "/home/merlin/workspace/TDR-Merlin/tdr/protocol/gen/tdr_xlsx_reader_l.c"
}
#line 212 "/home/merlin/workspace/TDR-Merlin/tdr/protocol/tdr_xlsx_reader_l.re"

ERROR_RET:
	if(self->cell_matrix != NULL)
	{
		free(self->cell_matrix);
	}
	return E_TDR_ERROR;
}
